# ESCA

./: CMakeLists.txt
src/: CMakeLists.txt
src/AST/: ASTWalker.cpp  ASTWalker.h  ESCAASTVisitor.cpp
src/FSM/: FSM.cpp  FSM.h  StateFSM.h
src/utils/: common.cpp  common.h
tests/: CMakeLists.txt  run_tests.cpp
tests/examples/: test_nullptr.cpp
