include_directories(../src)

add_executable(run_tests run_tests.cpp)

target_link_libraries(run_tests
        utils
        ast
        target
        fsm
        smt
        z3
        clangAST
        clangLex
        clangBasic
        clangFrontend
        LLVMWindowsManifest 
        LLVMXRay 
        LLVMLibDriver 
        LLVMDlltoolDriver 
        LLVMCoverage 
        LLVMLineEditor 
        LLVMXCoreDisassembler 
        LLVMXCoreCodeGen 
        LLVMXCoreDesc 
        LLVMXCoreInfo 
        LLVMX86TargetMCA 
        LLVMX86Disassembler 
        LLVMX86AsmParser 
        LLVMX86CodeGen 
        LLVMX86Desc 
        LLVMX86Info 
        LLVMWebAssemblyDisassembler 
        LLVMWebAssemblyAsmParser 
        LLVMWebAssemblyCodeGen 
        LLVMWebAssemblyUtils 
        LLVMWebAssemblyDesc 
        LLVMWebAssemblyInfo 
        LLVMVEDisassembler 
        LLVMVEAsmParser 
        LLVMVECodeGen 
        LLVMVEDesc 
        LLVMVEInfo 
        LLVMSystemZDisassembler 
        LLVMSystemZAsmParser 
        LLVMSystemZCodeGen 
        LLVMSystemZDesc 
        LLVMSystemZInfo 
        LLVMSparcDisassembler 
        LLVMSparcAsmParser 
        LLVMSparcCodeGen 
        LLVMSparcDesc 
        LLVMSparcInfo 
        LLVMRISCVTargetMCA 
        LLVMRISCVDisassembler 
        LLVMRISCVAsmParser 
        LLVMRISCVCodeGen 
        LLVMRISCVDesc 
        LLVMRISCVInfo 
        LLVMPowerPCDisassembler 
        LLVMPowerPCAsmParser 
        LLVMPowerPCCodeGen 
        LLVMPowerPCDesc 
        LLVMPowerPCInfo 
        LLVMNVPTXCodeGen 
        LLVMNVPTXDesc 
        LLVMNVPTXInfo 
        LLVMMSP430Disassembler 
        LLVMMSP430AsmParser 
        LLVMMSP430CodeGen 
        LLVMMSP430Desc 
        LLVMMSP430Info 
        LLVMMipsDisassembler 
        LLVMMipsAsmParser 
        LLVMMipsCodeGen 
        LLVMMipsDesc 
        LLVMMipsInfo 
        LLVMLoongArchDisassembler 
        LLVMLoongArchAsmParser 
        LLVMLoongArchCodeGen 
        LLVMLoongArchDesc 
        LLVMLoongArchInfo 
        LLVMLanaiDisassembler 
        LLVMLanaiCodeGen 
        LLVMLanaiAsmParser 
        LLVMLanaiDesc 
        LLVMLanaiInfo 
        LLVMHexagonDisassembler 
        LLVMHexagonCodeGen 
        LLVMHexagonAsmParser 
        LLVMHexagonDesc 
        LLVMHexagonInfo 
        LLVMBPFDisassembler 
        LLVMBPFAsmParser 
        LLVMBPFCodeGen 
        LLVMBPFDesc 
        LLVMBPFInfo 
        LLVMAVRDisassembler 
        LLVMAVRAsmParser 
        LLVMAVRCodeGen 
        LLVMAVRDesc 
        LLVMAVRInfo 
        LLVMARMDisassembler 
        LLVMARMAsmParser 
        LLVMARMCodeGen 
        LLVMARMDesc 
        LLVMARMUtils 
        LLVMARMInfo 
        LLVMAMDGPUTargetMCA 
        LLVMAMDGPUDisassembler 
        LLVMAMDGPUAsmParser 
        LLVMAMDGPUCodeGen 
        LLVMAMDGPUDesc 
        LLVMAMDGPUUtils 
        LLVMAMDGPUInfo 
        LLVMAArch64Disassembler 
        LLVMAArch64AsmParser 
        LLVMAArch64CodeGen 
        LLVMAArch64Desc 
        LLVMAArch64Utils 
        LLVMAArch64Info 
        LLVMOrcJIT 
        LLVMWindowsDriver 
        LLVMMCJIT 
        LLVMJITLink 
        LLVMInterpreter 
        LLVMExecutionEngine 
        LLVMRuntimeDyld 
        LLVMOrcTargetProcess 
        LLVMOrcShared 
        LLVMDWP 
        LLVMDebugInfoLogicalView 
        LLVMDebugInfoGSYM 
        LLVMOption 
        LLVMObjectYAML 
        LLVMObjCopy 
        LLVMMCA 
        LLVMMCDisassembler 
        LLVMLTO 
        LLVMCFGuard 
        LLVMFrontendOpenACC 
        LLVMFrontendHLSL 
        LLVMExtensions 
        Polly 
        PollyISL 
        LLVMPasses 
        LLVMCoroutines 
        LLVMipo 
        LLVMInstrumentation 
        LLVMVectorize 
        LLVMLinker 
        LLVMFrontendOpenMP 
        LLVMDWARFLinkerParallel 
        LLVMDWARFLinker 
        LLVMGlobalISel 
        LLVMMIRParser 
        LLVMAsmPrinter 
        LLVMSelectionDAG 
        LLVMCodeGen 
        LLVMTarget 
        LLVMObjCARCOpts 
        LLVMCodeGenTypes 
        LLVMIRPrinter 
        LLVMInterfaceStub 
        LLVMFileCheck 
        LLVMFuzzMutate 
        LLVMScalarOpts 
        LLVMInstCombine 
        LLVMAggressiveInstCombine 
        LLVMTransformUtils 
        LLVMBitWriter 
        LLVMAnalysis 
        LLVMProfileData 
        LLVMSymbolize 
        LLVMDebugInfoBTF 
        LLVMDebugInfoPDB 
        LLVMDebugInfoMSF 
        LLVMDebugInfoDWARF 
        LLVMObject 
        LLVMTextAPI 
        LLVMMCParser 
        LLVMIRReader 
        LLVMAsmParser 
        LLVMMC 
        LLVMDebugInfoCodeView 
        LLVMBitReader 
        LLVMFuzzerCLI 
        LLVMCore 
        LLVMRemarks 
        LLVMBitstreamReader 
        LLVMBinaryFormat 
        LLVMTargetParser 
        LLVMTableGen 
        LLVMSupport 
        LLVMDemangle
                # LLVM
                # ${LLVM_ALL_TARGETS}
                # ${LLVM_LIBS}
        )

#add_executable(tests examples/test1.cpp)
#add_executable(tests examples/test2.cpp)
#add_executable(tests examples/test3.cpp)
add_executable(tests examples/test4.cpp)
